Removed Pythia references from base template meta-data

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,16 +8,16 @@
 	<meta charset="utf-8"> 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 	<meta name="author" content="Pythia"> 
-	<meta name="description" content="Online Event platform "> 
+	<meta name="description" content="Hackathon London 2012"> 
 	<meta property="og:image" content="http://www.petrominpng.com.pg/images/logo_big.png" />
 	<meta name="viewport" content="width=920, initial-scale=auto"> 
 	<meta property="og:type" content="website" />
-	<meta property="og:title" content="Pythia" /> 
+	<meta property="og:title" content="Hackathon London 2012" /> 
 
-	<meta property="og:site_name" content="Pythia" />
+	<meta property="og:site_name" content="Hackathon London 2012" />
 	<title>
 		{% block title %}
-			Pythia.com 
+			Hackathon London 2012 
 		{% end %}
 	</title>
 
