--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-Constantinos Christou and Emilios Nicolaou will do magic here!!!! Come back later this weekened and check it out.
-Poios en pisw p tin maska?
+<h1 align="center">O SAKIS KAMNI PIPPES</h1>
 {% end%}
 
