--- a/templates/login.html
+++ b/templates/login.html
@@ -1,58 +1,6 @@
 {% extends "base.html" %}
 
 {% block content %} 
-    <style type="text/css">
-      /* Override some defaults */
-      html, body {
-        background-color: #eee;
-      }
-      body {
-        padding-top: 40px;
-      }
- 
-      /* The white background content wrapper */
-      .container > .content {
-        background-color: #fff;
-        padding: 20px;
-        margin: 0 -20px;
-        -webkit-border-radius: 10px 10px 10px 10px;
-           -moz-border-radius: 10px 10px 10px 10px;
-                border-radius: 10px 10px 10px 10px;
-        -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-           -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-                box-shadow: 0 1px 2px rgba(0,0,0,.15);
-      }
- 
- 
-      legend {
-        margin-right: -50px;
-        font-weight: bold;
-        color: #404040;
-      }
-    </style>
-
-    <div class="container">
-            <div class="hero-unit">
-			  <h1>Become the next superstar!</h1>
-			  <p>Register and submit your own covers from Youtube or become a judge and discover music's new talent.</p>
-			  <p>
-                <div class="login-form">
-                    <h2>Login</h2>
-                    <form id="login-form" action="/login/info" method="post">
-                        {% raw xsrf_form_html() %}
-                            <div class="clearfix">
-                                <input id="username" name="username" type="text" placeholder="Username"><p style="display:inline;"> {{kwargs['msg_username']}}</p>
-                            </div>
-
-                            <div class="clearfix">
-                                <input id="password" name="password" type="password" placeholder="Password"><p style="display:inline;"> {{kwargs['msg_password']}}</p>
-                            </div>
-                            <button id="submit-btn" class="btn btn-primary" type="submit">Register</button>
-                    </form>
-                </div>
-			  </p>
-			</div>
-    </div> <!-- /container -->
-
+	<a href="/login/submit">Sign In with Facebook</a>
 {% end%}
 
