Checking migration to org

--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
 
 
 <div id="header">   
-  <a href="" class="facebookLogin"><img src="static/imgs/home_imgs/fb1.png" onmouseover="this.src='static/imgs/home_imgs/fb2.png'" onmouseout="this.src='static/imgs/home_imgs/fb1.png'"  /> </a> 
+  <a href="/login/submit" class="facebookLogin"><img src="static/imgs/home_imgs/fb1.png" onmouseover="this.src='static/imgs/home_imgs/fb2.png'" onmouseout="this.src='static/imgs/home_imgs/fb1.png'"  /> </a> 
   <span id="headerText">
  <a href="/trending">
    <img src="static/imgs/home_imgs/button.png" style="margin:auto;display:block;">
@@ -45,13 +45,11 @@
 	              <div id = "TITLE" class="textALLHead"> {{post.desc}}  
 	               <div class="textALLUser" id="USER"> by {{post.aid}}  </div>    </br></br>
 	                 <div id="blueTags{{i}}">
-	                  	<div class="category">  <span id="TAG" class="badge badge-important" style="font-size:15px; font-family:Helvetica">armani </span> </div>
-	                  	<div class="category">  <span id="TAG" class="badge badge-important" style="font-size:15px; font-family:Helvetica">shirt </span> </div>
+	                  	<div class="category">  <span id="TAG" class="badge badge-important" style="font-size:15px; font-family:Helvetica">hack </span> </div>
 	                 </div> 
 	
 	                 <div id="redTags{{i}}">
-	                  	<div class="category">  <span id="TAG" class="badge badge-info" style="font-size:15px; font-family:Helvetica">topshop</span> </div>
-	                  	<div class="category">  <span id="TAG" class="badge badge-info" style="font-size:15px; font-family:Helvetica">shirt </span> </div>
+	                  	<div class="category">  <span id="TAG" class="badge badge-info" style="font-size:15px; font-family:Helvetica">cool </span> </div>
 	                 </div>  
                   </div> 
               
@@ -79,13 +77,13 @@
               <div id = "TITLE" class="textALLHead"> Date! HELP!!  
                 <div class="textALLUser" id="USER"> by Elle  </div>    </br>
                  <div id="blueTags1">
-                  <div class="category">  <span id="TAG" class="badge badge-important" style="font-size:15px; font-family:Helvetica">Fcuk Jeans </span> </div>
-                  <div class="category">  <span id="TAG" class="badge badge-important" style="font-size:15px; font-family:Helvetica">All Stars shoes </span> </div>
+                  <div class="category">  <span id="TAG" class="badge badge-important" style="font-size:15px; font-family:Helvetica">Mango dress </span> </div>
+                  <div class="category">  <span id="TAG" class="badge badge-important" style="font-size:15px; font-family:Helvetica">Kitten sandals </span> </div>
                </div> 
 
                 <div id="redTags1">
-                  <div class="category">  <span id="TAG" class="badge badge-info" style="font-size:15px; font-family:Helvetica">Topshop dress</span> </div>
-                  <div class="category">  <span id="TAG" class="badge badge-info" style="font-size:15px; font-family:Helvetica">Fcuk Jeans </span> </div>
+                  <div class="category">  <span id="TAG" class="badge badge-info" style="font-size:15px; font-family:Helvetica">Ted Baker dress</span> </div>
+                  <div class="category">  <span id="TAG" class="badge badge-info" style="font-size:15px; font-family:Helvetica">Truffle shoes </span> </div>
                 </div>  
                </div> 
               
@@ -113,7 +111,7 @@
                 <div class="textALLUser" id="USER"> by Joanna  </div>    
 
                 <div id="redTags2">
-                  <div class="category">  <span id="TAG" class="badge badge-important" style="font-size:15px; font-family:Helvetica">Topshop dress</span> </div>
+                  <div class="category">  <span id="TAG" class="badge badge-important" style="font-size:15px; font-family:Helvetica">Topshop shirt</span> </div>
                   <div class="category">  <span id="TAG" class="badge badge-important" style="font-size:15px; font-family:Helvetica">Fcuk Jeans </span> </div>
                   <div class="category">  <span id="TAG" class="badge badge-important" style="font-size:15px; font-family:Helvetica">All Stars shoes </span> </div>
                </div> 
@@ -121,7 +119,7 @@
                 <div id="blueTags2">
                   <div class="category">  <span id="TAG" class="badge badge-info" style="font-size:15px; font-family:Helvetica">H&M accessories</span> </div>
                   <div class="category">  <span id="TAG" class="badge badge-info" style="font-size:15px; font-family:Helvetica">D&G Jeans </span> </div>
-                  <div class="category">  <span id="TAG" class="badge badge-info" style="font-size:15px; font-family:Helvetica">All Stars shoes </span> </div>
+                  <div class="category">  <span id="TAG" class="badge badge-info" style="font-size:15px; font-family:Helvetica">Slingback shoes </span> </div>
                 </div>  
 
                </div> 
@@ -148,11 +146,10 @@
               <div id = "TITLE" class="textALLHead"> Formal meeting  
                 <div class="textALLUser" id="USER"> by Maria </div>    
 
-                <div class="category" id="redTags3">  <span id="TAG" class="badge badge-important" style="font-size:15px; font-family:Helvetica"> Gucci skirt </span> </div>
+                <div class="category" id="redTags3">  <span id="TAG" class="badge badge-important" style="font-size:15px; font-family:Helvetica"> Gucci shirt </span> </div>
                
                       <div id="blueTags3">
-                  <div class="category">  <span id="TAG" class="badge badge-info" style="font-size:15px; font-family:Helvetica">Topshop dress</span> </div>
-                  <div class="category">  <span id="TAG" class="badge badge-info" style="font-size:15px; font-family:Helvetica">Fcuk Jeans </span> </div>
+                  <div class="category">  <span id="TAG" class="badge badge-info" style="font-size:15px; font-family:Helvetica">Topshop shirt</span> </div>
                 </div>  </div> 
 
               
