--- a/templates/home.html
+++ b/templates/home.html
@@ -8,17 +8,6 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
 
-
-<div id="header">   
-  <a href="/login/submit" class="facebookLogin"><img src="static/imgs/home_imgs/fb1.png" onmouseover="this.src='static/imgs/home_imgs/fb2.png'" onmouseout="this.src='static/imgs/home_imgs/fb1.png'"  /> </a> 
-  <span id="headerText">
- <a href="/trending">
-   <img src="static/imgs/home_imgs/button.png" style="margin:auto;display:block;">
-   </a>
-   
-     </span><div id="headerSep"></div> 
-</div>  
-
 <div id="main">  
 </br></br></br></br>
   <div id="contentTOP">
@@ -146,6 +135,7 @@
               <div id = "TITLE" class="textALLHead"> Formal meeting  
                 <div class="textALLUser" id="USER"> by Maria </div>    
 
+    <a href="/circles/create" type="button"/>Circles</a>
                 <div class="category" id="redTags3">  <span id="TAG" class="badge badge-important" style="font-size:15px; font-family:Helvetica"> Gucci shirt </span> </div>
                
                       <div id="blueTags3">
@@ -161,8 +151,17 @@
      </div>
 </div>
 </br>
+
 <div id="footer"> about us   <span style="padding-left:50px"> contact us </span> </div> 
 
 {% end%}
+
+{% block jquery_templates %}
+	<script id="first-time-options-template" type="text/x-jquery-tmpl">
+		<div class="clearfix">
+			Hello
+		</div>
+	</script>
+{%end%}
 
 
