Rollovers for buttons + ccs styling for footer

--- a/templates/create-circles.html
+++ b/templates/create-circles.html
@@ -8,9 +8,8 @@
 	  <br>
 	  <p>Now that you are registered you can invite your friends to be your own personal stylists.</p>
 	  <p>
-	    <a onclick="sendRequestViaMultiFriendSelector(); return false;" class="btn btn-primary btn-large">
-	      Invite friends
-	    </a>
+	    <a title="Invite your friends to be your stylists!" onclick="sendRequestViaMultiFriendSelector(); return false;" class="btn btn-primary btn-large">Invite friends</a>
+   	    <a title="Nah! I'll invite them later." href="/" class="btn btn btn-large">Skip</a>
 	  </p>
 	</div>
 </div>
