--- a/static/css/Joanna.css
+++ b/static/css/Joanna.css
@@ -65,17 +65,18 @@ body {padding: 0px; margin: 0px; background-image: url('imgs/back.png');}
   		background-color:white;
 }
 
-#footer {  background-color:#626262;   
-	       height:44px;
-           padding: 5px;
-           color:white;
-           font-family: Champagne;
-           font-size: 23px;
-           text-align: center;
-           padding-top:15px;
 
-	    }
-
+#footer {
+   position:absolute;
+   bottom:0;
+   width:100%;
+   height:44px;  
+   color:white; 
+   background-color:#626262;
+   font-family: Champagne;
+   font-size: 23px;
+   text-align: center;
+}
 
 
 #contentTOP {
