--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
 {% block content %}
 {% end %}
 	{% raw xsrf_form_html() %}
-
+<div id="footer"> about us   <span style="padding-left:50px"> contact us </span> </div> 
 {% block scripts %}
 	{% for js in kwargs['js_deps'] %}
 		<script src="{{static_url(js)}}"></script>
